--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ Because un happiness enaku romba mukkiyam ❤️ and una enaku epavum nomba nomb
             }
 
             document.getElementById("cakeMsg").innerHTML =
-                "Unaku cream pudikathu theriyum 😏 cake mathum sapduuu 😁💖";
+                "Unaku cream pudikathu theriyum 😊 cake mathum sapduuu 😁💖 wait pannu thangooo next page varum...😘";
 
             setTimeout(() => show("proposalSection"), 6000);
         }
@@ -571,3 +571,4 @@ Because un happiness enaku romba mukkiyam ❤️ and una enaku epavum nomba nomb
 
 
 </html>
+
